--- a/template.html
+++ b/template.html
@@ -3,5 +3,14 @@
   <head>
   </head>
   <body>
+    <div class="jumbotron">
+      <form>
+        <div class="form-group">
+          <label for="inputRss">RSS feed:</label>
+          <input class="form-control" id="inputRss">
+        </div>
+        <button type="button" class="btn btn-primary">Add</button>
+      </form>
+    </div>
   </body>
 </html>
