--- a/template.html
+++ b/template.html
@@ -1,19 +1,21 @@
 <!doctype html5>
 <html>
   <head>
+    <meta charset="utf-8">
   </head>
   <body>
     <div class="container" id="container">
       <div class="jumbotron">
         <form id='feedForm' class="needs-validation" novalidate>
-          <div class="form-group">
-            <label for="inputRss">RSS feed:</label>
+          <div class="form-group has-feedback">
+            <label for="inputRss">Input a feed url:</label>
             <input class="form-control" id="feedInput" required>
             <div id="invalid-feedback" class="invalid-feedback">error</div>
           </div>
           <button id="addButton" type="submit" class="btn btn-primary">Add</button>
         </form>
       </div>
+      <div id="errorAlert" class="alert alert-danger" role="alert" display="none"></div>
       <div class="row mb-3">
         <div class="col-md-4 themed-grid-col" id="feedContainer"></div>
         <div class="col-md-8 themed-grid-col" id="postContainer"></div>
