view layer corrections

--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
             <input class="form-control" id="feedInput" required>
             <div id="invalid-feedback" class="invalid-feedback">error</div>
           </div>
-          <button id="addButton" type="submit" class="btn btn-primary collapse show">Add</button>
+          <button id="addButton" type="submit" class="btn btn-primary collapse show" disabled>Add</button>
           <button id="loadingButton" class="btn btn-primary collapse" type="button" disabled>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Loading...
